--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,44 @@
   background-repeat: repeat-y;
 }
 
+:root{
+
+  --background-blue-01: #6DA5C2;
+  --background-blue-02: #6D8CB7;
+  --background-blue-03: #7EABC7;
+  --background-blue-04: #4D709D;
+  --background-blue-05: #1F6E9E;
+  --background-blue-06: #2C5275;
+  --background-blue-07: #5F75A0;
+  --background-blue-08: #263549;
+
+  --text-white: #fff;
+  --text-preto: #000;
+  --title-blue: #263549;
+
+}
+
+.txt-branco {color: var(--text-white);}
+
+.boxcolor-blue-01{background-color: var(--background-blue-01);}
+.boxcolor-blue-02{background-color: var(--background-blue-02);}
+.boxcolor-blue-03{background-color: var(--background-blue-03);}
+.boxcolor-blue-04{background-color: var(--background-blue-04);}
+.boxcolor-blue-05{background-color: var(--background-blue-05);}
+.boxcolor-blue-06{background-color: var(--background-blue-06);}
+.boxcolor-blue-07{background-color: var(--background-blue-07);}
+.boxcolor-blue-08{background-color: var(--background-blue-08);}
+
+@font-face {
+  font-family: 'Xiaomi Brand';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('./fonts/Brand.woff2') format('woff2');
+}
+
 @import url("https://i02.appmifile.com/i18n/fonts/CamphorPro/vf/index.css");
 @import url("https://i02.appmifile.com/i18n/fonts/CamphorPro/woff2/index.css");
-
-body {
-  font-family: "Camphor Pro", sans-serif;
-}
 
 .img-fluid {
   width: 100%;
@@ -18,36 +50,28 @@ body {
 
 .title {
   text-align: center;
-  font-size: 4.5rem;
+  font-size: 3rem;
   font-weight: 500;
-  font-family: "Camphor Pro", sans-serif;
+  font-family: "Xiaomi Brand";
   position: relative;
   line-height: 1;
-  overflow-wrap: break-word;
-  color: #292929;
-}
-
-.title-2 {
-  text-align: center;
-  font-weight: bold;
-  font-size: 2.7rem;
-  margin: 2rem;
-}
-
-.subtitle {
-  text-align: center;
-  font-size: 3.5rem;
-  font-weight: 800;
-  font-family: "Camphor Pro", sans-serif;
-  position: relative;
-  margin-bottom: 1rem;
   overflow-wrap: break-word;
 }
 
 .sub-title {
   text-align: center;
   font-size: 2.3rem;
-  font-weight: 400;
+  font-weight: 600;
+  font-family: "Camphor Pro", sans-serif;
+  position: relative;
+  margin-bottom: 1rem;
+  overflow-wrap: break-word;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 2.3rem;
+  font-weight: 600;
   font-family: "Camphor Pro", sans-serif;
   position: relative;
   margin-bottom: 1rem;
@@ -55,7 +79,7 @@ body {
 }
 
 .p-center {
-  font-size: 1.9rem;
+  font-size: 1.1rem;
   text-align: center;
   padding: 20px;
   font-family: "Camphor Pro", sans-serif;
@@ -64,294 +88,113 @@ body {
   overflow-wrap: break-word;
 }
 
-.p-aviso {
+
+.p-notas{
+  text-align: left;
   font-size: 1rem;
+  padding: 5rem;
+}
+
+.icons-text {
+  font-size: 1rem;
+  text-align: center;
+  font-family: "Camphor Pro", sans-serif;
+  position: relative;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-top: 1rem;
+}
+
+.spacing{padding: 3rem;}
+
+/******************************* Grid *******************************/
+
+.grid-second-s101 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 7rem;
+  padding: 2rem;
+}
+
+.grid-icons-xiaomi{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+/************************* Mobile ***********************/
+
+@media only screen and (min-width: 0px) and (max-width: 920px) {
+
+
+/********************** Grind Mobile *******************/
+
+.grid-second-s101 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  max-width: 24rem;
+  margin: 0 auto;
+}
+  
+/********************************************************/
+
+  .spacing{padding: 1.5rem;}
+  
+  .title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+  font-family: "Xiaomi Brand";
+  position: relative;
+  line-height: 1;
+  }
+
+  .subtitle {
+  text-align: center;
+  font-size: 1.09rem;
+  font-weight: 700;
+  font-family: "Camphor Pro", sans-serif;
+  position: relative;
+  margin-bottom: 0.5rem;
+  }
+
+  .p-center {
+  font-size: 0.99rem;
   text-align: center;
   padding: 20px;
   font-family: "Camphor Pro", sans-serif;
   position: relative;
   overflow-wrap: break-word;
-}
+  }
 
-.icons-title {
-  font-size: 3rem;
-  text-align: center;
-  font-family: "Camphor Pro", sans-serif;
-  position: relative;
-  font-weight: 500;
-  color: #5c317e;
-  margin-top: 1rem;
-  line-height: 1.2;
-}
-
-.icons-title-01 {
-  font-size: 2.5rem;
-  text-align: center;
-  font-family: "Camphor Pro", sans-serif;
-  position: relative;
-  font-weight: 500;
-  color: #5c317e;
-  margin-top: 1rem;
-  line-height: 1.2;
-}
-
-.icons-text {
-  font-size: 1.3rem;
-  text-align: center;
-  font-family: "Camphor Pro", sans-serif;
-  position: relative;
-  font-weight: 400;
-  line-height: 1.2;
-  margin-top: 1rem;
-}
-
-.icons-tex {
+  .icons-text {
   font-size: 1rem;
   text-align: center;
   font-family: "Camphor Pro", sans-serif;
   position: relative;
-  font-weight: 400;
-  color: #7f7f7f;
-}
-
-.txt-preto {
-  color: #292929;
-}
-
-.txt-branco {
-  color: #fff;
-}
-
-.txt-azul {
-  color: #00e9fe;
-}
-
-.boxcolor {
-  background-color: #fcfbfc;
-}
-
-.boxcolor2 {
-  background-color: #fff;
-}
-
-.boxcolor3 {
-  background-color: #05061a;
-}
-
-p.txt-branco-preto {
-  color: #fff;
-}
-
-/********************************** Grid *************************************/
-
-.grid-pad-se-desk {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  max-width: 90rem;
-  margin: 0 auto;
-  border: 1px solid #ccc;
-
-  display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: 100px 100px 100px;
-}
-
-.grid-pad-se {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 40rem;
-  margin: 0 auto;
-  gap: 4rem;
-}
-
-.grid-pad-se-text {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  max-width: 56rem;
-  margin: 0 auto;
-  gap: 9rem;
-}
-
-.grid-img-text {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  max-width: 58rem;
-  margin: 0 auto;
-  gap: 15rem;
-  position: relative;
-  top: -11rem;
-}
-
-.grid-img-pad {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  flex-direction: row;
-  gap: 2rem;
-}
-
-/************************************** Mobile ************************************************/
-
-@media only screen and (max-width: 920px) {
-  .grid-img-text {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    max-width: 30rem;
-    margin: 0 auto;
-    flex-direction: row;
-    gap: 4rem;
-    margin-top: 1rem;
-    align-items: center;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-top: 1rem;
   }
 
-  .grid-pad-se-text {
-display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    max-width: 15rem;
-    margin: 0 auto;
-    flex-direction: row;
-    gap: 1rem;
-    margin-top: 1rem;
-    align-content: center;
-    align-items: center;
+  .p-notas {
+  text-align: left;
+  font-size: 0.9rem;
+  padding: 0.5rem;
   }
 
 
-  .grid-img-pad {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    padding: 1rem;
-  }
-
-  .grid-pad-se {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    max-width: 11rem;
-    margin: 0 auto;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem;
-  }
-
-  .grid-buds4-desk {
-    display: none;
-  }
-
-  .img-fluid-mob {
-    width: 100%;
-  }
-
-  p.txt-branco-preto {
-    color: #05061a;
-  }
-  .title {
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 500;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    line-height: 1;
-  }
-
-  .title-2 {
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.8rem;
-    margin: 2rem;
-  }
-
-  .subtitle {
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 800;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    margin-bottom: 0.5rem;
-  }
-
-  .sub-title {
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 400;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    margin-bottom: 0.5rem;
-  }
-
-  .p-center {
-    font-size: 1.3rem;
-    text-align: center;
-    padding: 20px;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    overflow-wrap: break-word;
-  }
-
-  .p-aviso {
-    font-size: 0.8rem;
-    text-align: center;
-    padding: 20px;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-  }
-
-  .icons-title {
-    font-size: 1.3rem;
-    text-align: center;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    font-weight: 800;
-    margin-top: 1rem;
-  }
-
-  .icons-text {
-    font-size: 1rem;
-    text-align: center;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    font-weight: 500;
-    line-height: 1.2;
-    margin-top: 1rem;
-  }
-
-  .icons-tex {
-    font-size: 1rem;
-    text-align: center;
-    font-family: "Camphor Pro", sans-serif;
-    position: relative;
-    font-weight: 400;
-    color: #7f7f7f;
-  }
-
-  .div02 {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-bottom: 0.625rem;
-    margin-top: 0.625rem;
-    min-height: 11.25rem;
-    width: 20.416667rem;
-  }
-
-  .div03 {
-    align-items: flex-start;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    min-height: 8.333333rem;
-    width: 20.395833rem;
-  }
 }
