--- a/css/style.css
+++ b/css/style.css
@@ -48,25 +48,7 @@
   height: auto;
 }
 
-.title {
-  text-align: center;
-  font-size: 3rem;
-  font-weight: 500;
-  font-family: "Xiaomi Brand";
-  position: relative;
-  line-height: 1;
-  overflow-wrap: break-word;
-}
 
-.sub-title {
-  text-align: center;
-  font-size: 2.3rem;
-  font-weight: 600;
-  font-family: "Camphor Pro", sans-serif;
-  position: relative;
-  margin-bottom: 1rem;
-  overflow-wrap: break-word;
-}
 
 .subtitle {
   text-align: center;
@@ -81,7 +63,7 @@
 .p-center {
   font-size: 1.1rem;
   text-align: center;
-  padding: 20px;
+
   font-family: "Camphor Pro", sans-serif;
   position: relative;
   line-height: 1.3;
@@ -131,7 +113,7 @@
 
 /************************* Mobile ***********************/
 
-@media only screen and (min-width: 0px) and (max-width: 920px) {
+@media only screen  and (max-width: 920px) {
 
 
 /********************** Grind Mobile *******************/
@@ -151,16 +133,8 @@
   
 /********************************************************/
 
-  .spacing{padding: 1.5rem;}
-  
-  .title {
-  text-align: center;
-  font-size: 2rem;
-  font-weight: 500;
-  font-family: "Xiaomi Brand";
-  position: relative;
-  line-height: 1;
-  }
+  .spacing{padding: 1rem;}
+
 
   .subtitle {
   text-align: center;
@@ -174,7 +148,7 @@
   .p-center {
   font-size: 0.99rem;
   text-align: center;
-  padding: 20px;
+  padding: 1rem;
   font-family: "Camphor Pro", sans-serif;
   position: relative;
   overflow-wrap: break-word;
@@ -188,6 +162,10 @@
   font-weight: 500;
   line-height: 1.2;
   margin-top: 1rem;
+  }
+
+  .icons-img{
+    width: 6rem;
   }
 
   .p-notas {
