--- a/css/style.css
+++ b/css/style.css
@@ -119,16 +119,12 @@
 /********************** Grind Mobile *******************/
 
 .grid-second-s101 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
+ 
   gap: 1rem;
-  padding: 1rem;
-  max-width: 24rem;
-  margin: 0 auto;
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
 }
   
 /********************************************************/
